<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/DefaultMargin">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_home" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/Popup_Exercice_Name"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Popup_Exercice_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Popup_Exercice_Muscle_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Popup_Exercice_Muscle_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Popup_Exercice_Name" />

    <TextView
        android:id="@+id/Popup_Exercice_Muscle_subtitle"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Popup_Exercice_Muscle_subtitle"
        app:layout_constraintStart_toStartOf="@+id/Popup_Exercice_Muscle_title"
        app:layout_constraintTop_toBottomOf="@+id/Popup_Exercice_Muscle_title" />

    <TextView
        android:id="@+id/Popup_Exercice_nbserie_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Popup_Exercice_nbserie_title"
        app:layout_constraintStart_toStartOf="@+id/Popup_Exercice_Muscle_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/Popup_Exercice_Muscle_subtitle" />

    <TextView
        android:id="@+id/Popup_Exercice_nbserie_subtitle"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Popup_Exercice_nbserie_title"
        app:layout_constraintStart_toStartOf="@+id/Popup_Exercice_nbserie_title"
        app:layout_constraintTop_toBottomOf="@+id/Popup_Exercice_nbserie_title" />

    <ImageView
        android:id="@+id/star_button"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/unlike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Popup_Exercice_nbserie_subtitle" />

    <TextView
        android:id="@+id/nb_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/item_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/star_button" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/likeanim"
        android:layout_width="87dp"
        android:layout_height="105dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/star_button"
        app:layout_constraintEnd_toEndOf="@+id/star_button"
        app:layout_constraintStart_toStartOf="@+id/star_button"
        app:layout_constraintTop_toTopOf="@+id/star_button"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/like_anim" />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/unlikeanim"
        android:layout_width="87dp"
        android:layout_height="105dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/star_button"
        app:layout_constraintEnd_toEndOf="@+id/star_button"
        app:layout_constraintStart_toStartOf="@+id/star_button"
        app:layout_constraintTop_toTopOf="@+id/star_button"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/unlike_anim" />


</androidx.constraintlayout.widget.ConstraintLayout>